# ruSTAR

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: phase16_algorithm.md  phase17_features.md
docs/dev/: ALIGNMENT_FIXES.md  BUGFIX_2026-02-09.md  PHASE12_COMPLETE.md  STAR_SA_RESEARCH.md  TESTING_SUMMARY.md
docs/star_comparison/: 01_recursive_stitcher.md  02_stitch_align_to_transcript.md  03_extend_align.md  04_seed_window_dp.md  05_mapped_filter.md  DIFFERENCES.md  README.md
src/: lib.rs  params.rs  stats.rs
src/align/: read_align.rs  score.rs  seed.rs  stitch.rs
src/chimeric/: detect.rs  mod.rs  output.rs
src/genome/: mod.rs
src/index/: io.rs  mod.rs  sa_index.rs  suffix_array.rs
src/io/: bam.rs  fastq.rs  sam.rs
src/junction/: mod.rs  sjdb_insert.rs
src/quant/: mod.rs  transcriptome.rs
test/: assess_faithfulness.py  diff_star_transcriptome.sh
tests/: alignment_features.rs  transcriptome_sam.rs
